--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'com.google.code.gson:gson:2.8.6'
+	implementation 'org.apache.commons:commons-exec:1.3'
+	implementation 'com.github.docker-java:docker-java-core:3.2.7'
+	implementation 'com.github.docker-java:docker-java-transport-okhttp:3.2.7'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testCompile('io.projectreactor:reactor-test')
+	testImplementation 'io.projectreactor:reactor-test'
 }
 
 test {
