--- a/build.gradle
+++ b/build.gradle
@@ -19,10 +19,14 @@ dependencies {
 	implementation 'org.apache.commons:commons-exec:1.3'
 	implementation 'com.github.docker-java:docker-java-core:3.2.7'
 	implementation 'com.github.docker-java:docker-java-transport-okhttp:3.2.7'
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+	compileOnly 'org.projectlombok:lombok:1.18.16'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
-	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+	testCompileOnly 'org.projectlombok:lombok:1.18.16'
 	runtimeClasspath files("build/classes/kotlin/main")
+	annotationProcessor 'org.projectlombok:lombok:1.18.16'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
 
 sourceSets {
