--- a/notification/build.gradle
+++ b/notification/build.gradle
@@ -3,12 +3,50 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
     id 'idea'
+    id 'maven'
     id 'org.jetbrains.kotlin.jvm' version '1.4.21'
 }
 
+def env = System.getenv()
+
 group = 'me.imlc'
 version = '0.0.1-SNAPSHOT'
+def artifactId = 'notification'
 sourceCompatibility = '15'
+
+def getString(String... strs) {
+    for (str in strs) {
+       if(str != null && str.length() > 0) {
+           return str
+       }
+    }
+    return null
+}
+
+def username = getString(env['MAVEN_USERNAME'], mavenUsername)
+def password = getString(env['MAVEN_PASSWORD'], mavenPassword)
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: 'https://packages.aliyun.com/maven/repository/2058875-release-8IhuRy/') {
+                authentication(
+                        userName: username,
+                        password: password
+                )
+            }
+            snapshotRepository(url: 'https://packages.aliyun.com/maven/repository/2058875-snapshot-GXiuFa/') {
+                authentication(
+                        userName: username,
+                        password: password
+                )
+            }
+            pom.version = "$project.version"
+            pom.artifactId = "$artifactId"
+            pom.groupId = "$project.group"
+        }
+    }
+}
 
 repositories {
     mavenCentral()
